# tlf

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS  New_Bandmap.txt  README  README.beginner-developer  README.beginner-developer.md  README.md  README_QTC.txt  ToDo  acconfig.h  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  config.status.lineno  configure  configure.ac  configure.in  datastructures  gmfsklogger.py  help.txt  mkinstalldirs  tlf.1  tlf.1.in
.github/workflows/: ci-build-ubuntu-20.yml  ci-build-ubuntu-22.yml  ci-build.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: FAQ  Makefile  Makefile.am  Makefile.in  Manual.md  New_Bandmap.txt  README  README.Cabrillo  README.RTTY  README.cabrillo  README.md  README.ssb  README_QTC.txt  README_QTC_RTTY.txt  Xresources  keynames.txt  station-sample.cbr
macros/: ax_with_curses.m4  ax_with_curses_extra.m4
rules/: Makefile  Makefile.am  Makefile.in  aadx_as  aadx_dx  arrl10m_dx  arrl160m_usa  arrldx_dx  arrldx_usa  arrlfd  arrlss  contest  cqp  cqp_ca  cqp_ca_mults  cqww  cwops_mini_cwt  dxped  eusprint  foc  focmarathon  lzdx  okom  pacc_dx  pacc_pa  qso  raem  raem.py  spdx_dx  spdx_sp  ssa_mt  stewperry  template  tesla  tesla.py  waedc  waedc_dx  waedc_dx_rtty  waedc_eu  waedc_eu_rtty  (+1 more)
rules/cqp/: cabrillo.fmt  cqp_ca  cqp_ca_mults
rules/cqww160/: cqww160  cqww160.py  cqww160.txt
rules/eakingofspain/: eakingofspain  eakingofspain.py
rules/eudx/: eudx  eudx.py
rules/hadx/: hadx  hadx.py
rules/hskc/: hskc  hskc.py
rules/iaruhf/: iaruhf  iaruhf.txt  iaruhf_mults
rules/iota/: iota  iota.py
rules/ksqp/: ksqp  ksqp.py
rules/mcd/: mcd  mcd.py  mcd.txt
rules/mst/: mst  mst.py
rules/mwc/: mwc  mwc.py
rules/naqp/: naqp  naqp.py
rules/neqp/: neqp  neqp_mults_outside
rules/ukeidx/: ukeidx  ukeidx.py
scripts/: Makefile  Makefile.am  Makefile.in  play_vk  soundlog
share/: Makefile  Makefile.am  Makefile.in  arrl10m_mults  arrldx_mults  arrlsections  cabrillo.fmt  callmaster  cwops.txt  darcmults  ea_sections  help.txt  ok_om.txt  okommults  paccmults  qtcmerge.py  spdxmults  ssamults  usa_canada_states
src/: Makefile  Makefile.am  Makefile.in  addarea.c  addarea.h  addcall.c  addcall.h  addmult.c  addmult.h  addpfx.c  addpfx.h  addspot.c  addspot.h  audio.c  audio.h  autocq.c  autocq.h  background_process.c  background_process.h  bandmap.c  bandmap.h  bands.c  bands.h  cabrillo_utils.c  cabrillo_utils.h  calledit.c  calledit.h  callinput.c  callinput.h  change_rst.c  change_rst.h  changefreq.c  changefreq.h  changepars.c  changepars.h  checklogfile.c  checklogfile.h  checkparameters.c  checkparameters.h  checkqtclogfile.c  (+226 more)
src/.deps/: addarea.P  addarea.Po  addcall.P  addcall.Po  addmult.P  addmult.Po  addpfx.P  addpfx.Po  addspot.P  addspot.Po  audio.P  audio.Po  autocq.P  autocq.Po  background_process.P  background_process.Po  calledit.P  calledit.Po  callinput.P  callinput.Po  changefreq.P  changefreq.Po  changepars.P  changepars.Po  checklogfile.P  checklogfile.Po  checkparameters.P  checkparameters.Po  cleanup.P  cleanup.Po  clear_display.P  clear_display.Po  cluster_bg.P  cluster_bg.Po  clusterinfo.P  clusterinfo.Po  deleteqso.P  deleteqso.Po  displayit.P  displayit.Po  (+138 more)
src/test/: data.c  makefile  minunit.h  test_sendbuf.c
test/: Makefile.am  ReadMe.adoc  data.c  functions.c  generate_defs.pl  test.h  test_addcall.c  test_addmult.c  test_addpfx.c  test_adif.c  test_bandmap.c  test_bands.c  test_cabrillo.c  test_checklogfile.c  test_clusterinfo.c  test_contest.c  test_cw_utils.c  test_dxcc.c  test_getctydata.c  test_getexchange.c  test_initial_exchange.c  test_lancode.c  test_locator2longlat.c  test_logutils.c  test_parse_logcfg.c  test_prefix.c  test_readcalls.c  test_recallexchange.c  test_rules.c  test_score.c  test_searchlog.c  test_sendbuf.c  test_utils.c  test_workedstations.c  test_wwv.c  test_zone_nr.c
test/data/: continents.txt  countries.txt  ie_empty_call.txt  ie_long_line.txt  ie_no_comma.txt  ie_ok.txt  ie_ok_dos.txt  ie_ok_multi_column.txt  ie_ok_tab.txt
test/rules/: run_tlf.py
test/rules/cqp_dx/rules/: cqp  cqp.py
test/rules/cqww/rules/: cqww
test/rules/cqww160/: cqww160.txt
test/rules/cqww160/rules/: cqww160  cqww160.py
test/rules/eudx/rules/: eudx  eudx.py
test/rules/focmarathon/rules/: focmarathon
test/rules/hskc/rules/: hskc  hskc.py
test/rules/iaruhf/: iaruhf.txt  iaruhf_mults
test/rules/iaruhf/rules/: iaruhf
test/rules/iota_island/rules/: iota  iota.py
test/rules/ksqp/rules/: ksqp  ksqp.py
test/rules/mcd/rules/: mcd  mcd.py  mcd.txt
test/rules/mst/rules/: mst  mst.py
test/rules/mwc/rules/: mwc  mwc.py
test/rules/naqp/rules/: naqp  naqp.py
test/rules/neqp/: neqp_mults
test/rules/neqp/rules/: neqp
test/rules/ukeidx/rules/: ukeidx  ukeidx.py
tools/: .astylerc  astylerc  check_dist_dir  check_dist_rules
