RULES_FILES = arrl10m_dx arrldx_dx arrldx_usa arrlfd arrlss contest cqww \
	dxped eusprint focmarathon lzdx pacc_pa pacc_dx qso spdx_dx spdx_sp ssa_mt \
	stewperry template wpx waedc_dx waedc_eu
SUBDIRS =

rulesdir = $(pkgdatadir)/rules
rules_DATA = $(RULES_FILES)

EXTRA_DIST = $(RULES_FILES)

CLEANFILES = *~

