RULES_FILES = arrl10m_dx arrl160m_usa arrldx_dx arrldx_usa arrlfd arrlss \
	      contest cqww cwops_mini_cwt \
	      dxped eusprint focmarathon lzdx pacc_pa pacc_dx \
	      okom qso spdx_dx spdx_sp ssa_mt stewperry template \
	      wpx waedc_dx waedc_eu waedc_dx_rtty waedc_eu_rtty \
	      aadx_dx aadx_as
SUBDIRS =

rulesdir = $(pkgdatadir)/rules
rules_DATA = $(RULES_FILES)

EXTRA_DIST = $(RULES_FILES)

CLEANFILES = *~

