RULES_FILES = arrl10m_dx arrl160m_usa arrldx_dx arrldx_usa arrlfd arrlss \
	      contest cqww cwops_mini_cwt \
	      dxped eusprint focmarathon lzdx pacc_pa pacc_dx \
	      okom qso spdx_dx spdx_sp ssa_mt stewperry template \
	      wpx waedc_dx waedc_eu waedc_dx_rtty waedc_eu_rtty \
	      aadx_dx aadx_as raem tesla tesla.py raem.py \
	      cqww160/cqww160 cqww160/cqww160.py cqww160/cqww160.txt \
	      hskc/hskc.py hskc/hskc \
	      ukeidx/ukeidx.py ukeidx/ukeidx \
	      mwc/mwc mwc/mwc.py \
	      eakingofspain/eakingofspain eakingofspain/eakingofspain.py \
	      iota/iota iota/iota.py \
	      ksqp/ksqp ksqp/ksqp.py \
	      hadx/hadx hadx/hadx.py \
	      cqp/cqp_ca_mults cqp/cqp_ca \
	      mcd/mcd.py mcd/mcd mcd/mcd.txt \
	      mst/mst \
	      naqp/naqp.py naqp/naqp \
	      neqp/neqp_mults neqp/neqp neqp/neqp_mults_outside \
	      eudx/eudx.py eudx/eudx

SUBDIRS =

rulesdir = $(pkgdatadir)/rules
rules_DATA = $(RULES_FILES)

EXTRA_DIST = $(RULES_FILES)

CLEANFILES = *~

